# p2p-node-handshake

./: .gitignore  Cargo.toml  README.md
src/: config.rs  connection.rs  error.rs  handshake.rs  lib.rs  message.rs  server.rs
src/bitcoin/: config.rs  error.rs  message.rs  mod.rs  protocol.rs  types.rs
src/generic/: connection.rs  four_way_handshake.rs  mod.rs  protocol.rs  server.rs
tests/: client_server.rs  integration_with_bitcoind.rs
