[package]
name = "p2p-node-handshake"
version = "0.9.0"
edition = "2021"
authors = [
    "Arno Haase <arno.haase@haase-consulting.com>",
]
description = "Solution for Eiger's coding challenge"
repository = "https://github.com/arnohaase/p2p-node-handshake"

[dependencies]
bitflags = "2"
bytes = "1"
log = "0"
sha2 = "0"

[dev-dependencies]
ctor = "0"
simple_logger = "4"
rstest = "0"
