[package]
name = "p2p-node-handshake"
version = "0.9.0"
edition = "2021"
authors = [
    "Arno Haase <arno.haase@haase-consulting.com>",
]
description = "Solution for Eiger's coding challenge"
repository = "https://github.com/arnohaase/p2p-node-handshake"

[dependencies]
bitflags = "2"
bytes = "1"
log = "0"
sha2 = "0"
thiserror = "1"
tokio = { version = "1", features = [ "full" ]}

[dev-dependencies]
ctor = "0"
lazy_static = "1"
rstest = "0"
simple_logger = "4"
tokio = { version = "1", features = ["test-util"] }
